--- a/css/style.css
+++ b/css/style.css
@@ -279,6 +279,14 @@ outline: none;
         transition: all 0.5s linear;
 }
 
+
+.img-hover{
+   transition: 1s;
+}
+
+.img-hover:hover{
+   transform: scale(110%);
+}
 strong {
 font-weight: bold;
 }
@@ -1797,7 +1805,7 @@ text-shadow: 1px 1px 2px #111;
 }
 
 .bg-photo.testimonials {
-background-image: url(../img/background/testimonials-bg.jpg);
+background-image: url(../img/testimonial.png);
 background-repeat: no-repeat;
 background-position: center;
 -webkit-background-size: cover;
