--- a/css/style.css
+++ b/css/style.css
@@ -4413,7 +4413,8 @@ display: inline-block;
 .owl-page span {
 display: block;
 width: 25px;
-height: 2px;
+height: 10px;
+border-radius: 5px !important;
 margin: 0 4px;
         opacity: 0.5;
    -moz-opacity: 0.5;
@@ -4425,6 +4426,7 @@ filter: alpha(opacity=50);
         border-radius: 0;
 background: rgba(17, 17, 17, 1);
 }
+
 
 .owl-page:hover span {
 background: rgba(17, 17, 17, 1);
@@ -4828,6 +4830,13 @@ background: #111;
 .fotorama__video-close {
 top: 75px;
 right: 18px;
+}
+
+
+@media only screen and (max-width:880px){
+   .logo-mobile{
+      display: none;
+   }
 }
 
 @media only screen and (max-width: 880px) {
